updated the database and check pakages inside the database

--- a/focus/app/src/main/res/layout/activity_pass_locker.xml
+++ b/focus/app/src/main/res/layout/activity_pass_locker.xml
@@ -12,6 +12,9 @@
         android:layout_height="wrap_content"
         android:text="You are Cheating !!"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="92dp"
-        tools:layout_editor_absoluteY="239dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
