--- a/focus/app/src/main/res/layout/activity_main.xml
+++ b/focus/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.derassom.three_pixels.focus.MainActivity">
 
+    <Button
+        android:id="@+id/blockApps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="block apps"
+        android:onClick="blockApps"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="259dp" />
 </android.support.constraint.ConstraintLayout>
