--- a/focus/app/src/main/res/values/styles.xml
+++ b/focus/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="WhiteCheck">
+        <item name="colorAccent">#fff</item>
+        <item name="android:textColorSecondary">#fff</item>
+    </style>
 </resources>
