--- a/focus/app/src/main/res/layout/fragment_appinfo.xml
+++ b/focus/app/src/main/res/layout/fragment_appinfo.xml
@@ -13,6 +13,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="5.5"
+            android:background="@drawable/title"
+            android:orientation="vertical"
+            android:paddingLeft="10dp">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:text="Apps Info"
+                android:textAlignment="viewStart"
+                android:textColor="@color/ic_launcher_background"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_weight="5"
@@ -87,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:background="@color/white"
             android:orientation="vertical">
 
